--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.7.0",
+    "@tanstack/react-table": "^8.21.3",
     "@vercel/functions": "^2.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
