--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-tooltip": "^1.2.8",
     "@supabase/ssr": "^0.7.0",
     "@tanstack/react-table": "^8.21.3",
+    "@types/web-push": "^3.6.4",
     "@vercel/functions": "^2.2.12",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -59,6 +60,7 @@
     "tailwind-merge": "^3.3.1",
     "ulid": "^3.0.1",
     "vaul": "^1.1.2",
+    "web-push": "^3.6.7",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
   },
