--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
+    "twilio": "^5.8.0",
     "ulid": "^3.0.1",
     "vaul": "^1.1.2",
     "web-push": "^3.6.7",
